--- a/modules/ROOT/pages/deployment/services/s-list/app-registry.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/app-registry.adoc
@@ -2,7 +2,7 @@
 :toc: right
 :description: The Infinite Scale App-Registry service
 
-:ext_name: app-registry
+:service_name: app-registry
 
 == Introduction
 
