--- a/modules/ROOT/pages/deployment/services/s-list/audit.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/audit.adoc
@@ -2,7 +2,7 @@
 :toc: right
 :description: The audit service logs all events of the system as an audit log. Per default, it will be logged to standard out, but can also be configured to a file output.
 
-:ext_name: audit
+:service_name: audit
 
 == Introduction
 
