--- a/modules/ROOT/pages/deployment/services/s-list/auth-machine.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/auth-machine.adoc
@@ -2,7 +2,7 @@
 :toc: right
 :description: The Infinite Scale Auth Machine service
 
-:ext_name: auth-machine
+:service_name: auth-machine
 
 == Introduction
 
