--- a/modules/ROOT/pages/deployment/services/s-list/idm.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/idm.adoc
@@ -2,7 +2,7 @@
 :toc: right
 :description: The Infinite Scale IDM service provides a minimal LDAP Service for Infinite Scale. It is started as part of the runtime and serves as a central place for storing user and group information.
 
-:ext_name: idm
+:service_name: idm
 
 == Introduction
 
