--- a/modules/ROOT/pages/deployment/services/s-list/invitations.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/invitations.adoc
@@ -2,7 +2,7 @@
 :toc: right
 :description: The Infinite Scale invitations service provides an Invitation Manager that can be used to invite external users, aka guests, to an organization.
 
-:ext_name: invitations
+:service_name: invitations
 
 // remember to REMOVE the corresponding tab if a new ocis release will be published
 
