--- a/modules/ROOT/partials/deployment/services/env-and-yaml.adoc
+++ b/modules/ROOT/partials/deployment/services/env-and-yaml.adoc
@@ -1,5 +1,5 @@
 ////
-The attribute 'ext_name' (mandatory) and 'no_yaml' (not mandatory) will be handed over by the calling page.
+The attribute 'service_name' (mandatory) and 'no_yaml' (not mandatory) will be handed over by the calling page.
 If no_yaml is set, it will exclude rendering yaml files because it does not exist.
 
 Print a dependent explanation line:
@@ -29,14 +29,14 @@ To exclude a deprecation file if not wanted - like when the file will just not e
 // if set, it will show the deprecation table in all tabs, independent if that tab has one or not
 ifndef::no_deprecation[]
 
-include::{ocis-services-raw-url}{service_tab_1}{ocis-services-final-path}adoc/{ext_name}_deprecation.adoc[]
+include::{ocis-services-raw-url}{service_tab_1}{ocis-services-final-path}adoc/{service_name}_deprecation.adoc[]
 ifeval::["{show-deprecation}" == "true"]
 :has_deprecation_tab_1: true
 endif::[]
 
 ifndef::no_second_tab[]
 ifdef::use_service_tab_2[]
-include::{ocis-services-raw-url}{service_tab_2}{ocis-services-final-path}adoc/{ext_name}_deprecation.adoc[]
+include::{ocis-services-raw-url}{service_tab_2}{ocis-services-final-path}adoc/{service_name}_deprecation.adoc[]
 ifeval::["{show-deprecation}" == "true"]
 :has_deprecation_tab_2: true
 endif::[]
@@ -44,7 +44,7 @@ endif::use_service_tab_2[]
 
 ifndef::no_third_tab[]
 ifdef::use_service_tab_3[]
-include::{ocis-services-raw-url}{service_tab_3}{ocis-services-final-path}adoc/{ext_name}_deprecation.adoc[]
+include::{ocis-services-raw-url}{service_tab_3}{ocis-services-final-path}adoc/{service_name}_deprecation.adoc[]
 ifeval::["{show-deprecation}" == "true"]
 :has_deprecation_tab_3: true
 endif::[]
@@ -64,11 +64,11 @@ endif::no_deprecation[]
 ifndef::no_yaml[]
 === Environment Variables
 
-The `{ext_name}` service is configured via the following environment variables:
+The `{service_name}` service is configured via the following environment variables:
 endif::no_yaml[]
 
 ifdef::no_yaml[]
-The `{ext_name}` variables are defined in the following way:
+The `{service_name}` variables are defined in the following way:
 endif::no_yaml[]
 
 // create the tabs. note that if no_second_tab is set, the third tab is also not shown
@@ -78,14 +78,14 @@ endif::no_yaml[]
 {service_tab_1_tab_text}::
 +
 --
-include::{ocis-services-raw-url}{service_tab_1}{ocis-services-final-path}adoc/{ext_name}_configvars.adoc[]
+include::{ocis-services-raw-url}{service_tab_1}{ocis-services-final-path}adoc/{service_name}_configvars.adoc[]
 --
 ifndef::no_second_tab[]
 ifdef::use_service_tab_2[]
 {service_tab_2_tab_text}::
 +
 --
-include::{ocis-services-raw-url}{service_tab_2}{ocis-services-final-path}adoc/{ext_name}_configvars.adoc[]
+include::{ocis-services-raw-url}{service_tab_2}{ocis-services-final-path}adoc/{service_name}_configvars.adoc[]
 --
 endif::use_service_tab_2[]
 ifndef::no_third_tab[]
@@ -93,7 +93,7 @@ ifdef::use_service_tab_3[]
 {service_tab_3_tab_text}::
 +
 --
-include::{ocis-services-raw-url}{service_tab_3}{ocis-services-final-path}adoc/{ext_name}_configvars.adoc[]
+include::{ocis-services-raw-url}{service_tab_3}{ocis-services-final-path}adoc/{service_name}_configvars.adoc[]
 --
 endif::use_service_tab_3[]
 endif::no_third_tab[]
@@ -114,7 +114,7 @@ See the xref:deployment/general/general-info.adoc#configuration-file-naming[Conf
 --
 [source,yaml]
 ----
-include::{ocis-services-raw-url}{service_tab_1}{ocis-services-final-path}{ext_name}-config-example.yaml[]
+include::{ocis-services-raw-url}{service_tab_1}{ocis-services-final-path}{service_name}-config-example.yaml[]
 ----
 --
 ifndef::no_second_tab[]
@@ -124,7 +124,7 @@ ifdef::use_service_tab_2[]
 --
 [source,yaml]
 ----
-include::{ocis-services-raw-url}{service_tab_2}{ocis-services-final-path}{ext_name}-config-example.yaml[]
+include::{ocis-services-raw-url}{service_tab_2}{ocis-services-final-path}{service_name}-config-example.yaml[]
 ----
 --
 endif::use_service_tab_2[]
@@ -135,7 +135,7 @@ ifdef::use_service_tab_3[]
 --
 [source,yaml]
 ----
-include::{ocis-services-raw-url}{service_tab_3}{ocis-services-final-path}{ext_name}-config-example.yaml[]
+include::{ocis-services-raw-url}{service_tab_3}{ocis-services-final-path}{service_name}-config-example.yaml[]
 ----
 --
 endif::use_service_tab_3[]
