--- a/modules/ROOT/pages/deployment/services/env-vars-special-scope.adoc
+++ b/modules/ROOT/pages/deployment/services/env-vars-special-scope.adoc
@@ -54,14 +54,14 @@ endif::[]
 // https://github.com/owncloud/ocis/blob/master/docs/helpers/extended_vars.yaml
 // see the readme.md file in that folder
  
-:ext_name: extended
+:service_name: extended
 :no_deprecation: true
 
 include::partial$deployment/services/env-and-yaml.adoc[]
 
 == Global Environment Variables
 
-:ext_name: global
+:service_name: global
 :no_deprecation: true
 
 Note that the descriptions of these environment variables may differ depending on the service context.
