--- a/modules/ROOT/pages/deployment/services/s-list/app-provider.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/app-provider.adoc
@@ -2,7 +2,7 @@
 :toc: right
 :description: App providers represent apps, if the app is not able to register itself. Currently there is only the CS3org WOPI server app provider.
 
-:ext_name: app-provider
+:service_name: app-provider
 
 == Introduction
 
