--- a/modules/ROOT/pages/deployment/services/s-list/auth-bearer.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/auth-bearer.adoc
@@ -2,7 +2,7 @@
 :toc: right
 :description: The Infinite Scale Auth Bearer service authenticates OpenID Connect bearer tokens.
 
-:ext_name: auth-bearer
+:service_name: auth-bearer
 
 == Introduction
 
