--- a/modules/ROOT/pages/deployment/services/s-list/policies.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/policies.adoc
@@ -2,7 +2,7 @@
 :toc: right
 :description: The Infinite Scale policies service provides a new gRPC API which can be used to check whether a requested operation is allowed or not. To do so, Open Policy Agent (OPA) is used to define the set of rules of what is permitted and what is not.
 
-:ext_name: policies
+:service_name: policies
 
 // remember to REMOVE the corresponding tab if a new ocis release will be published
 
