--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -362,7 +362,7 @@ Expects a URL including _protocol_, _host_ and optionally _port_ to simplify con
 
 NOTE: If you need to access Infinite Scale running on a VM or a remote machine via a host name other than localhost or in a container, you *must* configure the host name with `OCIS_URL`. The same applies if you are not using host names but an IP address (e.g. 192.168.178.25) instead.
 
-NOTE: By default, Infinite Scale enforces https for web and client access. If necessary, this can be changed in particulart setups to http, which is *not* recommended for production. For details see xref:deployment/services/tls.adoc#tls-for-the-http-frontend[TLS for the HTTP Frontend] and xref:deployment/services/s-list/proxy.adoc#special-settings[Proxy Service Configuration].
+NOTE: By default, Infinite Scale enforces https for web and client access. If necessary, this can be changed in particular setups to http, which is *not* recommended for production. For details see xref:deployment/services/tls.adoc#tls-for-the-http-frontend[TLS for the HTTP Frontend] and xref:deployment/services/s-list/proxy.adoc#special-settings[Proxy Service Configuration].
 
 include::partial$multi-location/idm-https-reverse-proxy.adoc[]
 --
@@ -494,7 +494,7 @@ See the xref:{s-path}/proxy.adoc#special-settings[Special Settings] section in t
 
 == Using a Reverse Proxy
 
-If you are using a reverse proxy like Traefik and the reverse proxy manages the certificates to secure the client access, you can, though not mandatory, use extra certificates between the proxy and Infinite Scale. See the section xref:handling-certificates[Handling Certificates] for more details.
+If you are using a reverse proxy like Traefik and the reverse proxy manages the certificates to secure the client access, you can use extra certificates between the proxy and Infinite Scale, although this is not mandatory. See the section xref:handling-certificates[Handling Certificates] for more details.
 
 include::partial$multi-location/idm-https-reverse-proxy.adoc[]
 
