--- a/modules/ROOT/pages/deployment/services/tls.adoc
+++ b/modules/ROOT/pages/deployment/services/tls.adoc
@@ -161,7 +161,7 @@ Disable TLS certificate validation for the LDAP connections. Do not set this in 
 === TLS for the HTTP Frontend
 
 PROXY_TLS::
-Enable/Disable HTTPS for the external HTTP services.  Must be set to 'true' if the built-in IDP service an no reverse proxy is used.
+Enable/Disable HTTPS for the external HTTP services.  Must be set to 'true' if the built-in IDP service and no reverse proxy is used.
 
 PROXY_TRANSPORT_TLS_KEY::
 Path/File name of the TLS server certificate key for the HTTPS server.
