--- a/modules/ROOT/pages/deployment/webui/webui.adoc
+++ b/modules/ROOT/pages/deployment/webui/webui.adoc
@@ -1,9 +1,9 @@
-= WebUI
+= Web UI
 :toc: right
-:description: Infinite Scale ships with an embedded web frontend named ownCloud Web. This WebUI can be configured and themed.
+:description: Infinite Scale ships with an embedded web frontend named ownCloud Web. This web UI can be configured and themed.
 
 == Introduction
 
 {description}
 
-While theming handles the look and feel, you can manage behavior with customisation.
+While theming handles the look and feel, you can manage behavior with customization.
